name:                HMontage
version:             0.1.0.0
synopsis:            simple imagemagick montage implementation
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable HMontage
  main-is:             Main.hs
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fno-liberate-case
        -funfolding-use-threshold30
        -threaded
        -O2
        -with-rtsopts=-N

  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.7
               , unordered-containers
               , JuicyPixels
               , bytestring
               , vector
               , aeson
               , parallel

  hs-source-dirs:      src
  default-language:    Haskell2010
